--- a/components/nodejs-fhilcqjx/overlays/development/deployment-patch.yaml
+++ b/components/nodejs-fhilcqjx/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: nodejs-fhilcqjx
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-tssc/task-runner:1.7
-        name: container-image  
+        - image: quay.io/rhtap_qe/nodejs-fhilcqjx:01b2dd2edaf825a30c0623d939b7db0f64a2a09c@sha256:ced4ba50eca190e171fe9c76a35841727795f06d40f08334d157911dfd82023b
+          name: container-image
